MLE soundcloud embed

--- a/src/SecretPage/SecretPage.css
+++ b/src/SecretPage/SecretPage.css
@@ -3,3 +3,9 @@
     background-size: cover;
     background-attachment: fixed;
 }
+
+
+.player-wrapper {
+    height: 350px; 
+    /* height: 166px; */
+}
